# task_manager_sql

./: .env  Cargo.toml  tasks.db
migrations/: 0001_tasks.sql
src/: lib.rs  main.rs
src/tasks/: mod.rs
